Code cleanup in response to Android Studio linting.